--- a/app/src/main/res/layout/activity_add_comment.xml
+++ b/app/src/main/res/layout/activity_add_comment.xml
@@ -8,6 +8,7 @@
     android:layout_height="match_parent"
     tools:context=".AddCommentActivity">
 
+
     <TextView
         android:id="@+id/textViewVersionName"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
@@ -15,11 +16,28 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <EditText
-        android:id="@+id/editTextAddComment"
-        android:hint="Enter comment"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/editTextAddComment"
+                android:hint="Enter comment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <Button
+                android:id="@+id/buttonAddComment"
+                android:text="Add Comment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+    </ScrollView>
 
     <SeekBar
         android:max="5"
@@ -27,11 +45,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <Button
-        android:id="@+id/buttonAddComment"
-        android:text="Add Comment"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/textView"
@@ -44,6 +57,6 @@
     <ListView
         android:id="@+id/listViewComments"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></ListView>
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
